--- a/src/1_human_mobility.ipynb
+++ b/src/1_human_mobility.ipynb
@@ -413,10 +413,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd002501",
+   "id": "605ea1f8",
    "metadata": {},
    "source": [
-    "<img src=\"https://i.ibb.co/Nnr4Q9T/mapped.png\" width=\"500px\" height=\"auto\"></a>"
+    "<img src=\"https://i.ibb.co/Nnr4Q9T/mapped.png\" width=\"500px\" height=\"auto\">"
    ]
   },
   {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91374261",
+   "id": "0f43c5d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "476d27ce",
+   "id": "e9a4d738",
    "metadata": {},
    "source": [
     "Let's compute the speed! the function `getDistanceByHaversine(p0, p1)` returns the distance in km between point p0 and p1."
@@ -653,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c639ccf0",
+   "id": "6a038030",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1280,14 +1280,6 @@
     "**Exercise 2:**\n",
     "- Given a trajectory $T$ of $n$ GPS points, and a squared spatial tessellation $S$ in which each square has size $x$. What is the upper bound of the \"mapping\" error caused by the mapping of $T$ with respect to the tessellation? (see 2.2 of this tutorial)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25f356e5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
