--- a/src/1_human_mobility.ipynb
+++ b/src/1_human_mobility.ipynb
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d004acca",
+   "id": "989150ac",
    "metadata": {},
    "source": [
     "<img src=\"https://i.ibb.co/Nnr4Q9T/mapped.png\" width=\"500px\" height=\"auto\">"
@@ -424,7 +424,7 @@
    "id": "9a4804d7",
    "metadata": {},
    "source": [
-    "Important!\n",
+    "Be careful!\n",
     "- the mapping results in a loss of trajectory's details;\n",
     "- the finer the tessellation, the less details will be lost."
    ]
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f429d9f",
+   "id": "41fe90ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34ca14e7",
+   "id": "e4c098a8",
    "metadata": {},
    "source": [
     "Let's compute the speed! the function `getDistanceByHaversine(p0, p1)` returns the distance in km between point p0 and p1."
@@ -653,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fa32793",
+   "id": "d4e21c24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d986bc8",
+   "id": "1fda201d",
    "metadata": {},
    "source": [
     "In this tutorial we will see how to create a mobility network relative to New York City describing the movements of one week."
