--- a/src/1_Human_Mobility.ipynb
+++ b/src/1_Human_Mobility.ipynb
@@ -614,7 +614,9 @@
    "id": "d65445be",
    "metadata": {},
    "source": [
-    "`scikit-mobility` provides the `filter` function to filter out points with speed higher than `max_speed` km/h from the previous point."
+    "`scikit-mobility` provides the `filter` function to filter out points with speed higher than `max_speed` km/h from the previous point.\n",
+    "\n",
+    "<img src=\"https://i.ibb.co/bvvPHZH/noise2.png\"  width=\"500px\" height=\"auto\">"
    ]
   },
   {
