--- a/src/1_Human_Mobility.ipynb
+++ b/src/1_Human_Mobility.ipynb
@@ -187,7 +187,7 @@
     "\n",
     "    uid: user's identifier to which the trajectory belongs to\n",
     "\n",
-    "In short words **WHO**, **WHEN** and **WHERE**."
+    "In short words **WHO**, **WHERE** and **WHEN**."
    ]
   },
   {
@@ -1299,7 +1299,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1313,7 +1313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
